Prevent listing chooser tabs from line wrapping on hover.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7049,7 +7049,6 @@ body.with-listing-chooser {
 
             &:hover {
                 margin-left: 9px;
-                padding-right: 10px;
             }
 
             a {
@@ -7135,6 +7134,7 @@ body.with-listing-chooser {
 
         .error {
             margin: 4px 0;
+            width: 100px;
         }
 
         button {
